# vitra-ios

./: CMakeLists.txt  README.md  patch_curl_config.py  patch_ios.py  root_CMakeLists.txt
.github/workflows/: build_ios.yml
cmake/: ios_toolchain.cmake
vita3k/: CMakeLists.txt  interface.cpp  main.cpp  vita3k_CMakeLists.txt
vita3k/app/src/: app_init.cpp
vita3k/config/include/config/: config.h
vita3k/config/src/: version.cpp.in
vita3k/ctrl/src/: ctrl.cpp
vita3k/gui/: CMakeLists.txt
vita3k/gui/include/gui/: functions.h
vita3k/gui/src/: main_menubar.cpp  overlay_dialog.cpp  perf_overlay.cpp  settings_dialog.cpp  vita3k_update.cpp
vita3k/host/dialog/: CMakeLists.txt
vita3k/host/dialog/src/: filesystem_ios.cpp
vita3k/ios/: CMakeLists.txt  Info.plist  Vitra.entitlements  ios_overlay.h  ios_overlay.mm  ios_platform.h  ios_platform.mm  ios_renderer.cpp  ios_renderer.mm  ios_renderer_patch.h  ios_vulkan_bridge.h  ios_vulkan_bridge.mm
vita3k/ios/Assets.xcassets/Applcon.appiconset/: Contents.json
vita3k/modules/: CMakeLists.txt
vita3k/modules/SceNet/: macos_net_helper.h
vita3k/renderer/: metal_renderer.h
vita3k/touch/src/: touch.cpp
